maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:11: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  for(i->0 to l-1)
  ^JediEscaper:12: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  {
  ^JediEscaper:23: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return res
  ^