maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
val l=getMondeLargeur()
val h=getMondeHauteur()

override def run() {
  
}

def foundBaggle():Array[Int] {
  def res:Array[int] = (-1,1)
  for(i->0 to l-1)
  {
    for(j->0 to h-1)
    {
      if(aBiscuit(i,j))
      {
        res(0)=i
        res(1)=j
        return res
      }	
    }
  }
  return res
}